# C-Script

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
apis/: String_API.md
build_scripts/: enable_string  enable_string.js
include/: Nullable.h  String.h
include/cpps/: Nullable.h  String.h
include/cpps/detail/: String.inl  alias.h
include/cppscript/: Array.h  ElementProxy.h  Slice.h
include/detail/: Array.ipp  ElementProxy.ipp  Slice.ipp  String.impl.def  String.ipp
scripts/: enable_string  enable_string.bash  enable_string.ps1
src/: String.cpp
tests/: CMakeLists.txt
tests/Nullable_Tests/: nullable_basic_test.cpp  nullable_core_test.cpp  nullable_op_test.cpp
